Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -38,12 +38,14 @@
 <h3>
 <a id="apex-ir-to-xlsx" class="anchor" href="#apex-ir-to-xlsx" aria-hidden="true"><span class="octicon octicon-link"></span></a>APEX IR to XLSX</h3>
 
-<p><a href="https://dl.dropboxusercontent.com/u/27902346/APEX/apex_ir_xlsx_latest.zip">Download Latest Release</a>  </p>
+<p>The current release is V1.2.0<br>
+<a href="downloads/apex_ir_xlsx_v1.2.0.zip">Download Latest Release</a>  </p>
 
 <h3>
 <a id="pptx-creator" class="anchor" href="#pptx-creator" aria-hidden="true"><span class="octicon octicon-link"></span></a>PPTX Creator</h3>
 
-<p><a href="https://dl.dropboxusercontent.com/u/27902346/APEX/pptx_creator_latest.zip">Download Latest Release</a>  </p>
+<p>The current release is V0.5.0<br>
+<a href="downloads/pptx_creator_v0.5.0.zip">Download Latest Release</a>  </p>
       </section>
     </div>
 
