Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 <a id="apex-ir-to-xlsx" class="anchor" href="#apex-ir-to-xlsx" aria-hidden="true"><span class="octicon octicon-link"></span></a>APEX IR to XLSX</h3>
 
 <p>The current release is V1.2.1<br>
-Check out the latest <a href="https://github.com/commi235/APEX_IR_XLSX">README</a> in the repository.<br>
+Check out the latest README in the <a href="https://github.com/commi235/APEX_IR_XLSX">Repository</a>.<br>
 <a href="downloads/apex_ir_xlsx_v1.2.1.zip">Download Latest Release</a>  </p>
 
 <h3>
 <a id="pptx-creator" class="anchor" href="#pptx-creator" aria-hidden="true"><span class="octicon octicon-link"></span></a>PPTX Creator</h3>
 
 <p>The current release is V0.5.1<br>
-Check out the latest <a href="https://github.com/commi235/PPTX_CREATOR">README</a> in the repository.<br>
+Check out the latest README in the <a href="https://github.com/commi235/PPTX_CREATOR">Repository</a>.<br>
 <a href="downloads/pptx_creator_v0.5.1.zip">Download Latest Release</a>  </p>
       </section>
     </div>
