Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@ Check out the latest README in the <a href="https://github.com/commi235/APEX_IR_
 <p>The current release is V0.5.1<br>
 Check out the latest README in the <a href="https://github.com/commi235/PPTX_CREATOR">Repository</a>.<br>
 <a href="downloads/pptx_creator_v0.5.1.zip">Download Latest Release</a>  </p>
+
+<h2>
+<a id="demo-application" class="anchor" href="#demo-application" aria-hidden="true"><span class="octicon octicon-link"></span></a>Demo Application</h2>
+
+<p>You can download the demo application <a href="downloads/xlsx_pptx_demo_app.sql">here</a>.</p>
       </section>
     </div>
 
